--- a/UploadCenter/Site.Master
+++ b/UploadCenter/Site.Master
@@ -36,10 +36,16 @@
 		<li id="menu-from-pc"><a href="/frompc.aspx">Upload from PC</a></li>
 		<li id="menu-from-remote"><a href="/remote.aspx">Upload from Remote Url</a></li>
 		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Members <b class="caret"></b></a>
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+				<% if (UserManager.SignedIn()){ %>
+					Welcome, <%:UserManager.GetUsername() %> <b class="caret"></b>
+				<% }else{  %>
+				Members <b class="caret"></b>
+				<% } %>
+			</a>
 			<ul class="dropdown-menu">
 				<% if (UserManager.SignedIn()){ %>
-				<li><span class="menu-item">Welcome, <%:UserManager.GetUsername() %></span></li>
+				<%--<li><span class="menu-item">Welcome, <%:UserManager.GetUsername() %></span></li>--%>
 				<% if (UserManager.UserIsAdmin()){%>
 				<li><a href="/account/config.aspx">Configuration</a></li>
 				<li><a href="/account/users.aspx">View Users</a></li>
